# Proyecto_1_Crazy_Break_Out

./: README.md
Client/: CMakeLists.txt
Client/Source Files/: SocketClient.cpp  SocketClient.h  main.cpp
Client/Source_Files/: SocketClient.cpp  SocketClient.h  ball.cpp  breakout.cpp  brick.hpp  main.cpp  painter.cpp  pedal.cpp  pedal.hpp
Doxygen/Client/html/: _socket_client_8cpp.html  _socket_client_8h.html  _socket_client_8h_source.html  annotated.html  class_socket_client-members.html  class_socket_client.html  classes.html  dir_922c588100a187620fdc1533bc178f73.html  dir_92928f4e864778eec7bc7e2bd7fcdd5a.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html
Doxygen/Client/latex/: _socket_client_8cpp.tex  _socket_client_8h.tex  _socket_client_8h_source.tex  annotated.tex  class_socket_client.tex  files.tex  main_8cpp.tex  refman.tex
Doxygen/Server/html/: _socket_server_8cpp.html  _socket_server_8h.html  _socket_server_8h_source.html  annotated.html  ball_8cpp.html  ball_8hpp_source.html  brick_8cpp.html  brick_8hpp_source.html  class_ball-members.html  class_ball.html  class_brick-members.html  class_brick.html  class_game-members.html  class_game.html  class_painter-members.html  class_painter.html  class_pedal-members.html  class_pedal.html  class_socket_server-members.html  class_socket_server.html  class_wall-members.html  class_wall.html  classes.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_c951f99478349e7afc797c40a594044e.html  files.html  force_8cpp.html  force_8hpp_source.html  functions.html  functions_func.html  game_8cpp.html  game_8hpp.html  game_8hpp_source.html  globals.html  globals_func.html  main_8cpp.html  painter_8cpp.html  painter_8hpp.html  painter_8hpp_source.html  pedal_8cpp.html  (+6 more)
Doxygen/Server/latex/: _socket_server_8cpp.tex  _socket_server_8h.tex  files.tex  (+28 more)
Header Files/: SocketServer.h
Server/: CMakeLists.txt
Server/Source Files/: Game.cpp  Game.h  SocketServer.cpp  SocketServer.h  State.h  State_Credits.cpp  State_Credits.h  State_Game.cpp  State_Game.h  State_Menu.cpp  State_Menu.h  main.cpp
Server/Source_Files/: Ball.cpp  Ball.h  Game.cpp  SocketServer.cpp  SocketServer.h  State_Credits.cpp  State_Game.cpp  State_Menu.cpp  User.cpp  User.h  ball.cpp  ball.hpp  breakout.cpp  brick.cpp  brick.hpp  force.cpp  force.hpp  game.cpp  game.hpp  main.cpp  painter.cpp  painter.hpp  pedal.cpp  pedal.hpp  wall.cpp  wall.hpp
Source Files/: ServerSocket.cpp  main.cpp
(+26 files in other folders)
